<?xml version="1.0"?>
<package format="2">
  <name>gui_synergy_slider</name>
  <version>0.0.0</version>
  <description>The gui_synergy_slider package</description>

  <maintainer email="higashi@hlab.sys.es.osaka-u.ac.jp">HIGASHI, Kazuki</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>sr_hand</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>controller_manager_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_py</build_export_depend>
  <build_export_depend>sr_hand</build_export_depend>
  <build_export_depend>sr_robot_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>sr_hand</exec_depend>
  <exec_depend>sr_robot_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rqt_gui plugin="${prefix}/gui_synergy_slider_plugin.xml"/>
  </export>
</package>
